# TextAutomation-TC

./: .gitignore  AGENTS.md  README.md  README_head.tmp  pyproject.toml  runner_all.tmp  text_automation.toml
Legacy Files to Migrate and Implement/DirectToInquiryPackage/: DirecttoInquiryAFTERHOURS.py  DirecttoInquiryALLDAY.py
Legacy Files to Migrate and Implement/GeneralUseScripts/: SQLQueryStore.py  SQLUtility.py  aggregateAccountBalance.py  automatedEmailHandler.py  fileAggregator.py  removeNullStudentsFromSchedule.py  reportDbConnection.py  telegramHandler.py
Legacy Files to Migrate and Implement/StudentAutoToDB/: StudentFormDBAutomation.py  name.html
scripts/: assessments_morning_1.bat  assessments_morning_57.bat  assessments_morning_rest.bat  assessments_scheduled.bat  combined_followup_workflow.bat  direct_inquiry_auto.bat  direct_inquiry_gravity_forms_baseline.bat  inquiry_followup_downey_daily.bat  inquiry_followup_quarterly.bat  meetings_morning_1.bat  meetings_morning_57.bat  meetings_morning_rest.bat  meetings_scheduled.bat  sqlite_migrations.sql  student_intake_auto.bat
scripts/SchedulingXMLsWindows/: inquiry_followup_downey_every_other_day.xml  (+1 more)
tests/: test_assessment_messages.py  test_dates.py  test_direct_inquiry_config.py  test_direct_inquiry_email.py  test_direct_inquiry_gravity_forms.py  test_direct_inquiry_zapier.py  test_gmail_account.py  test_inquiry_followup_cache.py  test_inquiry_followup_cli.py  test_inquiry_followup_messages.py  test_inquiry_followup_runner.py  test_inquiry_followup_sql.py  test_quo.py  test_wordpress_gravity_forms.py
(+73 files in other folders)
